fix: Correção do dos filtros e adicionado um atributo a mais no DTO do spo